# WhistleLab

./: .color_coded  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
NeuralNetworks/: AHDetector.net  AHDetector.norm
Source/: Main.cpp  SampleDatabase.cpp  SampleDatabase.hpp  SampleProvider.cpp  SampleProvider.hpp  WhistleLabApplication.cpp  WhistleLabApplication.hpp
Source/Detector/: AHDetector.cpp  AHDetector.hpp  BembelbotsDetector.cpp  BembelbotsDetector.hpp  EvaluationHandle.cpp  EvaluationHandle.hpp  HULKsDetector.cpp  HULKsDetector.hpp  NaoDevilsDetector.cpp  NaoDevilsDetector.hpp  UNSWDetector.cpp  UNSWDetector.hpp  WhistleDetector.hpp  WhistleDetectorBase.cpp  WhistleDetectorBase.hpp  WhistleDetectorFactory.hpp  WhistleDetectorFactoryBase.cpp  WhistleDetectorFactoryBase.hpp  WhistleDetectorInterface.cpp  WhistleDetectorInterface.hpp
Source/Engine/: AudioChannel.cpp  AudioChannel.hpp  AudioFile.cpp  AudioFile.hpp  EvaluationResults.cpp  EvaluationResults.hpp  SampleDatabase.cpp  SampleDatabase.hpp  WhistleLabEngine.cpp  WhistleLabEngine.hpp  WhistleLabel.cpp  WhistleLabel.hpp
Source/UI/: LabelWidget.cpp  LabelWidget.hpp  MainWindow.cpp  MainWindow.hpp  SampleDatabaseWidget.cpp  SampleDatabaseWidget.hpp
